--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>bjut.tech</title>
   </head>
   <body class="font-noto antialiased bg-slate-700 text-slate-200">
-    <div class="absolute top-0 left-0 w-full h-full -z-10 overflow-hidden pointer-events-none" id="particles"></div>
+    <div class="fixed top-0 left-0 w-full h-full -z-10 overflow-hidden pointer-events-none" id="particles"></div>
     <div class="w-full min-h-screen flex flex-col justify-center items-center gap-6 px-4 sm:px-8 py-8">
       <div class="max-w-xl flex flex-col items-stretch bg-slate-900 rounded-xl shadow-xl">
         <div class="flex flex-col gap-4 p-6 sm:p-8 border-b border-slate-800">
